refactor : 엔티티에서 DTO로 변환하는 로직 DTO 클래스로 이동